==> andywwright/STM32H7xx-modbus-debug-uart0-parity/Src/serial.c <==
#include <string.h>
#include "main.h"
#include "driver.h"
#include "grbl/hal.h"
#include "grbl/protocol.h"
#define MODBUS_EVEN_PARITY 1
#define SERIAL_PORT 0
#define SERIAL1_PORT 0
#define SERIAL2_PORT 0
#define UART0            usart(1)
#define UART0_IRQ        usartINT(1)
#define UART0_IRQHandler usartHANDLER(1)
#define UART0_CLK_En     usartCLKEN(1)
#define UART0            usart(2)
#define UART0_IRQ        usartINT(2)
#define UART0_IRQHandler usartHANDLER(2)
#define UART0_CLK_En     usartCLKEN(2)
#define UART0            usart(3)
#define UART0_IRQ        usartINT(3)
#define UART0_IRQHandler usartHANDLER(3)
#define UART0_CLK_En     usartCLKEN(3)
#define UART0            usart(6)
#define UART0_IRQ        usartINT(6)
#define UART0_IRQHandler usartHANDLER(6)
#define UART0_CLK_En     usartCLKEN(6)
#define UART0            usart(SERIAL_PORT)
#define UART0_IRQ        usartINT(SERIAL_PORT)
#define UART0_IRQHandler usartHANDLER(SERIAL_PORT)
#define UART0_CLK_En     usartCLKEN(SERIAL_PORT)
#define UART0_CLK HAL_RCC_GetPCLK2Freq()
#define UART0_CLK HAL_RCC_GetPCLK1Freq()
#define UART0_TX_PIN 9
#define UART0_RX_PIN 10
#define UART0_PORT GPIOA
#define UART0_AF GPIO_AF7_USART1
#define UART0_TX_PIN 6
#define UART0_RX_PIN 7
#define UART0_PORT GPIOB
#define UART0_AF GPIO_AF7_USART1
#define UART0_TX_PIN 14
#define UART0_RX_PIN 15
#define UART0_PORT GPIOB
#define UART0_AF GPIO_AF4_USART1
#define UART0_TX_PIN 2
#define UART0_RX_PIN 3
#define UART0_PORT GPIOA
#define UART0_AF GPIO_AF7_USART2

void serialRegisterStreams (void)
{
    static io_stream_details_t streams = {
        .n_streams = sizeof(serial) / sizeof(io_stream_properties_t),
        .streams = serial,
    };

#if SERIAL_PORT

    static const periph_pin_t tx0 = {
        .function = Output_TX,
        .group = PinGroup_UART1,
        .port  = UART0_PORT,
        .pin   = UART0_TX_PIN,
        .mode  = { .mask = PINMODE_OUTPUT },
        .description = "UART1"
    };

    static const periph_pin_t rx0 = {
        .function = Input_RX,
        .group = PinGroup_UART1,
        .port = UART0_PORT,
        .pin = UART0_RX_PIN,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART1"
    };

    hal.periph_port.register_pin(&rx0);
    hal.periph_port.register_pin(&tx0);

#endif

#if SERIAL1_PORT

    static const periph_pin_t tx1 = {
        .function = Output_TX,
        .group = PinGroup_UART2,
        .port  = UART1_PORT,
        .pin   = UART1_TX_PIN,
        .mode  = { .mask = PINMODE_OUTPUT },
        .description = "UART2"
    };

    static const periph_pin_t rx1 = {
        .function = Input_RX,
        .group = PinGroup_UART2,
        .port = UART1_PORT,
        .pin = UART1_RX_PIN,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART2"
    };

    hal.periph_port.register_pin(&rx1);
    hal.periph_port.register_pin(&tx1);

#endif

#if SERIAL2_PORT

    static const periph_pin_t tx2 = {
        .function = Output_TX,
        .group = PinGroup_UART3,
        .port  = UART2_PORT,
        .pin   = UART2_TX_PIN,
        .mode  = { .mask = PINMODE_OUTPUT },
        .description = "UART3"
    };

    static const periph_pin_t rx2 = {
        .function = Input_RX,
        .group = PinGroup_UART3,
        .port = UART2_PORT,
        .pin = UART2_RX_PIN,
        .mode = { .mask = PINMODE_NONE },
        .description = "UART3"
    };

    hal.periph_port.register_pin(&rx2);
    hal.periph_port.register_pin(&tx2);

#endif

    stream_register_streams(&streams);
}

static bool serialPutC (const char c)
{
    uint16_t next_head = BUFNEXT(txbuf.head, txbuf);    // Get pointer to next free slot in buffer

    while(txbuf.tail == next_head) {                    // While TX buffer full
        if(!hal.stream_blocking_callback())             // check if blocking for space,
            return false;                               // exit if not (leaves TX buffer in an inconsistent state)
    }
    txbuf.data[txbuf.head] = c;                         // Add data to buffer,
    txbuf.head = next_head;                             // update head pointer and
    UART0->CR1 |= USART_CR1_TXEIE;                      // enable TX interrupts

    return true;
}

static void serialTxFlush (void)
{
    UART0->CR1 &= ~USART_CR1_TXEIE;     // Disable TX interrupts
    txbuf.tail = txbuf.head;
}

static bool serialSetBaudRate (uint32_t baud_rate)
{
#if MODBUS_EVEN_PARITY
    // Reset CR1 then configure 8E1 format
    UART0->CR1 = 0;
    UART0->CR1 &= ~(USART_CR1_M0 | USART_CR1_M1 | USART_CR1_PCE | USART_CR1_PS);
    UART0->CR1 |= USART_CR1_RE | USART_CR1_TE | USART_CR1_PCE | USART_CR1_M0; // 8 data bits + even parity, RX+TX enable
#else
    UART0->CR1 = USART_CR1_RE | USART_CR1_TE;
#endif
    UART0->CR3 = USART_CR3_OVRDIS;
    UART0->BRR = UART_DIV_SAMPLING16(UART0_CLK, baud_rate, UART_PRESCALER_DIV1);
    UART0->CR1 |= (USART_CR1_UE|USART_CR1_RXNEIE);

    rxbuf.tail = rxbuf.head;
    txbuf.tail = txbuf.head;

    return true;
}

static bool serialDisable (bool disable)
{
    if(disable)
        UART0->CR1 &= ~USART_CR1_RXNEIE;
    else
        UART0->CR1 |= USART_CR1_RXNEIE;

    return true;
}

static const io_stream_t *serialInit (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .is_connected = stream_connected,
        .read = serialGetC,
        .write = serialWriteS,
        .write_n =  serialWrite,
        .write_char = serialPutC,
        .enqueue_rt_command = serialEnqueueRtCommand,
        .get_rx_buffer_free = serialRxFree,
        .get_rx_buffer_count = serialRxCount,
        .get_tx_buffer_count = serialTxCount,
        .reset_write_buffer = serialTxFlush,
        .reset_read_buffer = serialRxFlush,
        .cancel_read_buffer = serialRxCancel,
        .suspend_read = serialSuspendInput,
        .disable_rx = serialDisable,
        .set_baud_rate = serialSetBaudRate,
        .set_enqueue_rt_handler = serialSetRtHandler
    };

    if(!serialClaimPort(stream.instance))
        return NULL;

    UART0_CLK_En();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = (1 << UART0_RX_PIN)|(1 << UART0_TX_PIN),
        .Alternate = UART0_AF
    };
    HAL_GPIO_Init(UART0_PORT, &GPIO_InitStructure);

    serialSetBaudRate(baud_rate);

    HAL_NVIC_SetPriority(UART0_IRQ, 1, 0);
    HAL_NVIC_EnableIRQ(UART0_IRQ);

    return &stream;
}

static bool serial1PutC (const char c)
{
    uint32_t next_head = BUFNEXT(txbuf1.head, txbuf1);   // Set and update head pointer

    while(txbuf1.tail == next_head) {           // While TX buffer full
        if(!hal.stream_blocking_callback())     // check if blocking for space,
            return false;                       // exit if not (leaves TX buffer in an inconsistent state)
        UART1->CR1 |= USART_CR1_TXEIE;          // Enable TX interrupts???
    }

    txbuf1.data[txbuf1.head] = c;               // Add data to buffer
    txbuf1.head = next_head;                    // and update head pointer

    UART1->CR1 |= USART_CR1_TXEIE;              // Enable TX interrupts

    return true;
}

static uint16_t serial1TxCount (void)
{
    uint32_t tail = txbuf1.tail, head = txbuf1.head;

    return BUFCOUNT(head, tail, TX_BUFFER_SIZE) + (UART1->ISR & USART_ISR_TC ? 0 : 1);
}

static bool serial1SetBaudRate (uint32_t baud_rate)
{
#if MODBUS_EVEN_PARITY
    // Proper 8E1: 8 data bits, even parity, 1 stop bit
    UART1->CR1 = 0; // Clear config

    // Clear M bits
    UART1->CR1 &= ~(USART_CR1_M0 | USART_CR1_M1);

    // Set M0 for 8-bit + parity (8E1), enable RX, TX, parity
    UART1->CR1 |= USART_CR1_M0 | USART_CR1_PCE | USART_CR1_RE | USART_CR1_TE;

    // Ensure even parity (PS = 0)
    UART1->CR1 &= ~USART_CR1_PS;
#else
    UART1->CR1 = USART_CR1_RE | USART_CR1_TE;
#endif

    UART1->CR3 = USART_CR3_OVRDIS;
    UART1->BRR = UART_DIV_SAMPLING16(UART1_CLK, baud_rate, UART_PRESCALER_DIV1);
    UART1->CR1 |= (USART_CR1_UE | USART_CR1_RXNEIE);

    rxbuf1.tail = rxbuf1.head;
    txbuf1.tail = txbuf1.head;

    return true;
}

static bool serial1Disable (bool disable)
{
    if(disable)
        UART1->CR1 &= ~USART_CR1_RXNEIE;
    else
        UART1->CR1 |= USART_CR1_RXNEIE;

    return true;
}

static const io_stream_t *serial1Init (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .instance = 1,
        .is_connected = stream_connected,
        .read = serial1GetC,
        .write = serial1WriteS,
        .write_n =  serial1Write,
        .write_char = serial1PutC,
        .enqueue_rt_command = serial1EnqueueRtCommand,
        .get_rx_buffer_free = serial1RxFree,
        .get_rx_buffer_count = serial1RxCount,
        .get_tx_buffer_count = serial1TxCount,
        .reset_write_buffer = serial1TxFlush,
        .reset_read_buffer = serial1RxFlush,
        .cancel_read_buffer = serial1RxCancel,
        .suspend_read = serial1SuspendInput,
        .disable_rx = serial1Disable,
        .set_baud_rate = serial1SetBaudRate,
        .set_enqueue_rt_handler = serial1SetRtHandler
    };

    if(!serialClaimPort(stream.instance))
        return NULL;

    UART1_CLK_En();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode      = GPIO_MODE_AF_PP,
        .Pull      = GPIO_NOPULL,
        .Speed     = GPIO_SPEED_FREQ_VERY_HIGH,
        .Pin       = (1 << UART1_RX_PIN)|(1 << UART1_TX_PIN),
        .Alternate = UART1_AF
    };
    HAL_GPIO_Init(UART1_PORT, &GPIO_InitStructure);

    serial1SetBaudRate(baud_rate);

    HAL_NVIC_SetPriority(UART1_IRQ, 1, 0);
    HAL_NVIC_EnableIRQ(UART1_IRQ);

    return &stream;
}
